# narizaka

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  aligner.py  narizaka.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  publish.yml  python-package.yml
data/: Farshrutka.fb2
narizaka/: aligner.py  audiobook.py  data.py  narizaka.py  segmenter.py  splitter.py  textbook.py  textnormalizer.py  transcriber.py  utils.py
narizaka/asr_backends/: faster_whisper.py
narizaka/languages/uk/: textnormalizer.py
narizaka/languages/uk/num2words/: __init__.py  lang_UK.py
test_data/evolutsia/: Evoliutsiia_abo_Smert_Pryhody_Paviana_Tomasa.fb2
tests/: test_entrypoint.py  test_textnormalizer.py
