[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "narizaka"
authors = [
    {name = "Serhiy Stetskovych", email = "patriotyk+narizaka@gmail.com"},
]
description = "Tool to make high quality text to speech (tts) corpus from audio + text books."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tts", "text-to-speech", "audio corpus"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]


dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = false
packages = ["narizaka", "narizaka.asr_backends", "narizaka.languages", "narizaka.languages.uk", "narizaka.languages.uk.num2words"]

[project.scripts]
narizaka = "narizaka.narizaka:run"

[project.urls]
"Homepage" = "https://github.com/patriotyk/narizaka"
"Bug Tracker" = "https://github.com/patriotyk/narizaka/issues"

